--- a/Exercicio Plugin jQuery/main.html
+++ b/Exercicio Plugin jQuery/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <script src="script.js"></script>
 
 
 </head>
